ADD | File paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "paths": {
       "components/*": ["src/components/*"],
       "containers/*": ["src/containers/*"],
-      "screens/*": ["src/screens/*"]
+      "screens/*": ["src/screens/*"],
+      "lib/*": ["lib/*"],
+      "styles/*": ["styles/*"],
+      "types/*": ["types/*"]
     }
   }
 }
