--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-ts-template",
-    "slug": "expo-ts-template",
+    "name": "Calculator",
+    "slug": "calculator-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
