--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "calculator-app-expo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.5.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~47.0.12",
     "expo-font": "^11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
