--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/metro-config": "^0.5.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~47.0.12",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "^11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
